# ah

./: .gitignore  Cargo.toml  LICENSE.md  PKGBUILD  README.md
src/: cli.rs  file.rs  main.rs  packages.rs
