[package]
name = "ah-pkg"
version = "0.3.1"
authors = ["Michał Czyż <mike@c2yz.com>"]
edition = "2021"

description = "A declarative package manager for Arch Linux"
homepage = "https://github.com/eRgo35/ah"
repository = "https://github.com/eRgo35/ah"
documentation = "https://github.com/eRgo35/ah"
keywords = ["archlinux", "declarative", "package", "aur", "paru"]
license = "MIT"
readme = "README.md"

[[bin]]
path = "src/main.rs"
name = "ah"

[dependencies]
clap = { version = "4.5.10", features = ["derive"] }
colored = "2.1.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.20.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
